# wearable-hub

./: .env.sample  .gitignore  CHANGELOG.md  CLAUDE.md  Description.md  PLAN.md  README.md  chan_cras  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_project_subscribers.py  0003_health_user_id.py  0004_daily_consolidation.py  0005_study_memberships.py  0006_heart_rate_hrv.py  0007_study_intraday_hr.py  0008_subject_collection_window.py  0009_spo2_and_paired_devices.py  0010_intraday_hrv_spo2_optin.py  0011_study_intraday_activity.py  0012_daily_active_zone_minutes.py  0013_daily_active_minutes.py  0014_per_device_entry_code.py  0015_study_provider.py  0016_study_intraday_stress.py  0017_google_credential_sets.py  0018_subscriber_credential_set.py
backend/app/: accounts.py  branding.py  config.py  consolidation.py  crypto.py  dailywrite.py  db.py  garmin_backfill.py  garmin_ingest.py  main.py  models.py  scheduler.py  schemas.py  security.py
backend/app/jobs/: nightly.py
backend/app/providers/: base.py  fitbit_gh.py  garmin.py  gh_creds.py
backend/app/routers/: admin.py  auth.py  enroll.py  public.py  webhooks.py
backend/tests/: conftest.py  test_garmin_backfill.py  test_garmin_ingest.py  test_members.py  test_study_provider.py
docs/: garmin-integration-plan.md  garmin-portal-registration.md  intraday-data-reduction-plan.md  ui-redesign-plan.md
frontend/: 30-set-resolver.sh  Dockerfile  build-check.sh  index.html  nginx.conf  (+3 more)
(+34 files in other folders)
