[project]
name = "wearable-hub-backend"
version = "0.5.0"
description = "Wearable Hub backend — register research subjects' wearables (Google Health API / Fitbit, Garmin later) and ingest their data."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "pymysql>=1.1",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "cryptography>=44.0",
    "google-auth>=2.37",
    "requests>=2.32",  # google.auth.transport.requests needs it for token refresh
    "requests-oauthlib>=2.0",  # Garmin OAuth 1.0a (HMAC-SHA1 signing)
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "apscheduler>=3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
